# agentic-ai

./: README.md  pyproject.toml  requirements.txt  run_sample.py
src/jarvis/: __init__.py  cli.py  context_manager.py  db.py  model_selector.py  orchestrator.py  task_runner.py  vector_store.py  workflow_manager.py
src/jarvis/agents/: base.py  code.py  file.py  summarizer.py  system.py
src/jarvis/api/: main.py
src/jarvis/services/: bedrock.py  llm_client.py  ollama.py
src/jarvis/utils/: chunker.py
