[tool.poetry]
name = "jarvis-poc"
version = "0.1.0"
description = "A multi-context AI assistant powered by LLMs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
typer = "^0.9.0"
sqlmodel = "^0.0.14"
chromadb = "^0.4.22"
langchain = "^0.1.0"
autogen = "^0.2.0"
crewai = "^0.11.0"
boto3 = "^1.34.0"
aioredis = "^2.0.1"
celery = "^5.3.6"
docker = "^7.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py39"]
